Rabbit config added

--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,7 @@
-spring.data.mongodb.uri=${MONGO_URL}
-spring.rabbitmq.host=${RABBITMQ_HOST}
-spring.rabbitmq.username=${RABBITMQ_USER}
-spring.rabbitmq.password=${RABBITMQ_PASS}
-spring.rabbitmq.port=5672
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
+
+spring.rabbitmq.addresses=${SPRING_RABBITMQ_ADDRESS}
+spring.rabbitmq.ssl.enabled=true
 
 job.queue.name=jobQueue
 server.port=8083
