--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,5 @@
 spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
+spring.rabbitmq.listener.simple.acknowledge-mode=auto
 
 spring.rabbitmq.addresses=${SPRING_RABBITMQ_ADDRESS}
 spring.rabbitmq.ssl.enabled=true
